--- a/elements/sub.html
+++ b/elements/sub.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body,html{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
-        }
-        p {
-            max-width: 368px;
-        }
+      body,
+      html {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+      }
+      p {
+        max-width: 368px;
+      }
     </style>
-</head>
-<body>
-    
-<h1>O Elemento Sub</h1>
-<p>
-  Almost every developer's 
-  favorite molecule is 
-  C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>,
-   also known as "caffeine."
-</p>
-
-</body>
+  </head>
+  <body>
+    <h1>O Elemento Sub</h1>
+    <p>
+      Almost every developer's favorite molecule is C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known as
+      "caffeine."
+    </p>
+  </body>
 </html>
-
